# Stoff2D

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json  compile_flags.txt  count_lines.py  premake5.lua  run.bat  setup.bat
examples/: CMakeLists.txt
examples/shooter/: CMakeLists.txt
examples/shooter/include/: entities.h  game.h  particle_types.h  systems.h
examples/shooter/settings/: settings.c  settings.h
examples/shooter/src/: entities.c  game.c  main.c  particle_types.c  systems.c
examples/sound/: CMakeLists.txt
examples/sound/src/: audio.c
examples/test/: CMakeLists.txt
examples/test/src/: main.cpp
include/: components.h  defines.h  rendertexture.h  settings.h  shader.h  stoff2d.h  stoff2d_core.h  stoff2d_ecs.h
project/include/: component.h  system.h
project/src/: game.c  system.c
res/animations/: README.ani  animations.ani
res/shaders/: fCanvas.glsl  fQuad.glsl  fRendToFont.glsl  fScreen.glsl  vCanvas.glsl  vQuad.glsl  vRendToFont.glsl  vScreen.glsl  vText.glsl
res/shaders/engine/: fQuad.glsl  fRendToFont.glsl  vText.glsl
stoff2d/include/: animation.h  component_map.h  defines.h  ecs.h  particle.h  settings.h  shader.h  sprite_renderer.h  stoff2d.h
stoff2d/src/: animation.c  component_map.c  ecs.c  particle.c  sprite_renderer.c  stoff2d.c
stoff2d/stoff2d_core/include/: defines.h  stoff2d.h
stoff2d/stoff2d_core/src/: particle.c  shader.c  sprite_renderer.c  stoff2d.c
stoff2d/stoff2d_ecs/include/: components.h  stoff2d_ecs.h
stoff2d/stoff2d_ecs/src/: stoff2d_ecs.c
stoff2d_audio/: CMakeLists.txt
stoff2d_audio/src/: stoff2d_audio.c
stoff2d_core/: CMakeLists.txt  glad.c
stoff2d_core/include/: font.h  quad_renderer.h  utils.h
stoff2d_core/src/: animation.c  font.c  particle.c  quad_renderer.c  rendertexture.c  shader.c  sprite_renderer.c  stoff2d.c  stoff2d_core.c  utils.c
stoff2d_ecs/: CMakeLists.txt  component_map.c
stoff2d_ecs/include/: components.h
stoff2d_ecs/src/: stoff2d_ecs.c
